--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <link rel="stylesheet" href="public/css/styleglobal.css"/>
         <link rel="stylesheet" href="public/css/header.css"/>
         <link rel="stylesheet" href="public/css/index.css"/>
+        <link rel="stylesheet" href="public/css/footer.css"/>
            <title>Olá Mundo :D</title>
     </head>
     <body>
@@ -28,11 +29,10 @@
             </nav>
         </header>
         <main>
-            <h1 class="title">Oeee, essa é minha primeira página da web :P</h1>
+            <h1 class="text-center">Oeee, essa é minha primeira página da web :P</h1>
             <section class="section-capa">
                 <figure>
                     <img src="public/fotos/fotohome.png" alt="Devaria xD"/>
-                    <figcaption>Foto de Capa</figcaption>
                 </figure>
             </section>
             <!-- não continuado
@@ -42,8 +42,8 @@
                 </div>
             </section>
             -->  
-            <section> <!--abbr seria tipo uma "abreviação"--> <!--blockquote seria tipo uma citação-->
-                <h3>Para que os <abbr title="Developers" DEVs></abbr> fiquem sabendo, utilizamos<abbr title="Microsoft" MS> Azure</abbr></h3>
+            <section class="sectazure"> <!--abbr seria tipo uma "abreviação"--> <!--blockquote seria tipo uma citação-->
+                <h3 class="title"> <h3>Para que os <abbr title="Developers" >DEVs</abbr> fiquem sabendo, utilizamos<abbr title="Microsoft" > MS </abbr>Azure</h3> 
                 <blockquote cite="https://azure.microsoft.com/pt-br/free/search/?&ef_id=CjwKCAjwrqqSBhBbEiwAlQeqGnNyM3iie2HSV4yPz1BJ92-emgoOxto6blBuokXWKKuYVWWZUXhGmRoCf8AQAvD_BwE:G:s&OCID=AID2200154_SEM_CjwKCAjwrqqSBhBbEiwAlQeqGnNyM3iie2HSV4yPz1BJ92-emgoOxto6blBuokXWKKuYVWWZUXhGmRoCf8AQAvD_BwE:G:s&gclid=CjwKCAjwrqqSBhBbEiwAlQeqGnNyM3iie2HSV4yPz1BJ92-emgoOxto6blBuokXWKKuYVWWZUXhGmRoCf8AQAvD_BwE">Crie, implante e gerencie aplicativos em várias nuvens, no local e na borda</blockquote> 
             </section>
         </main>
