--- a/professores.html
+++ b/professores.html
@@ -5,7 +5,10 @@
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <link rel="stylesheet" href="public/css/styleglobal.css"/>
+        <link rel="stylesheet" href="public/css/devaria.css"/>
+        <link rel="stylesheet" href="public/css/footer.css"/>
         <link rel="stylesheet" href="public/css/header.css"/>
+        <link rel="stylesheet" href="public/css/profs.css"/>
     </head>
     <body>
         <header>
@@ -23,18 +26,19 @@
             </nav>
         </header>
         <main>
-            <h1>Professores Devaria</h1>
-            <section>
-                <div>
-                    <img src="public/fotos/fotoprofessores.png" width="500" alt="Os Professores da Devaria"/>
+            <h1 class="title text-center">Professores Devaria</h1>
+
+            <section class="contentcontainer">
+                <div class="text-center">
+                    <img class="width-50pct-desktop" src="public/fotos/fotoprofessores.png" alt="Professores Devaria" />
                 </div>
                 <article>
-                    <h2>Dani e Rafa</h2>
-                    <p>
-                        Os profs são especialista em <strong>desenvolvimento de sistemas</strong> e possuem mais de <em>10 anos de experiência.</em>
+                    <h2 class="title text-center">Dani, Rafa, Fi & Do</h2>
+                    <p class="text-justify width-50pct-desktop">
+                        Os professores são especialistas em <strong>desenvolvimento de sistemas</strong> e possuem mais de <em>10 anos de experiência</em>.
                     </p>
-                    <p>
-                        Todas as aulas de back e front serão conduzidas mais pelo Rafa e as aulas de gestão e operação ficarão com o Dani.
+                    <p class="text-justify width-50pct-desktop">
+                        Todas as aulas de Back e Front serão conduzidas mais pelo Rafa, Do e Fi, e as aulas mais de gestão e operações ficará com o Dani.
                     </p>
                 </article>
             </section>
@@ -42,8 +46,8 @@
         <footer>
             <section>
                 <span>contato@devaria.com.br</span> <br />
-                <span>Conheça o canal do youtube</span>
+                <span>Conheça o nosso canal do Youtube!</span>
             </section>
-        </footer>
+        </footer>       
     </body>
 </html>
